--- a/app/views/admins/guardians/edit.html.erb
+++ b/app/views/admins/guardians/edit.html.erb
@@ -3,75 +3,76 @@
   <h2 class="section-ttl row mb-3">保護者情報を編集してください。</h2>
 
   <!--保護者編集フォーム-->
-    <%= form_with model: @guardian, url: "/admins/guardians/#{@guardian.id}", local: true do |f| %>
+  <%= form_with model: @guardian, url: "/admins/guardian/#{@guardian.id}", local: true do |f| %>
 
     <!--エラーメッセージ-->
     <%= render 'layouts/error_messages', model: f.object %>
-      <!--氏名-->
-      <div class="row">
-        <div class="form-group col-md-6">
-          <%= f.label :last_name, "姓", class: "form-label" %>
-          <%= f.text_field :last_name, class: "form-control" %>
-        </div>
-        <div class="form-group col-md-6">
-          <%= f.label :first_name, "名", class: "form-label" %>
-          <%= f.text_field :first_name, class: "form-control" %>
-        </div>
-      </div>
-      <!--フリガナ-->
-      <div class="row">
-        <div class="form-group col-md-6">
-          <%= f.label :last_name_kana, "セイ", class: "form-label" %>
-          <%= f.text_field :last_name_kana, class: "form-control" %>
-        </div>
-        <div class="form-group col-md-6">
-          <%= f.label :first_name_kana, "メイ", class: "form-label" %>
-          <%= f.text_field :first_name_kana, class: "form-control" %>
-        </div>
-      </div>
-      <!--生徒氏名・入学年度・続柄-->
-      <div class="row">
-        <div class="form-group col-md-6">
-          <%= f.label :member_name, "生徒氏名", class: "form-label" %>
-          <%= f.text_field :member_name, class: "form-control" %>
-        </div>
-        <div class="form-group col-md-3">
-          <%= f.label :year_of_enrollment, "入学年度", class: "form-label" %>
-          <%= f.text_field :year_of_enrollment, class: "form-control" %>
-        </div>
-        <div class="form-group col-md-3">
-          <%= f.label :relationship, "続柄", class: "form-label" %>
-          <%= f.text_field :relationship, class: "form-control" %>
-        </div>
-      </div>
-      <!--郵便番号-->
-      <div class="row">
-        <div class="form-group col-md-3">
-          <%= f.label :postal_code, "郵便番号", class: "form-label" %>
-          <%= f.text_field :postal_code, class: "form-control" %>
-        </div>
-      </div>
-      <!--住所-->
-      <div class="row">
-        <div class="form-group col-md-12">
-          <%= f.label :address, "住所", class: "form-label" %>
-          <%= f.text_field :address, class: "form-control" %>
-        </div>
-      </div>
-      <!--電話番号-->
-      <div class="row">
-        <div class="form-group col-md-4">
-          <%= f.label :tel, "電話番号", class: "form-label" %>
-          <%= f.text_field :tel, class: "form-control" %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="form-group">
-        <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
-        </div>
+    <!--氏名-->
+    <div class="row">
+      <div class="form-group col-md-6">
+        <%= f.label :last_name, "姓", class: "form-label" %>
+        <%= f.text_field :last_name, class: "form-control" %>
       </div>
+      <div class="form-group col-md-6">
+        <%= f.label :first_name, "名", class: "form-label" %>
+        <%= f.text_field :first_name, class: "form-control" %>
+      </div>
+    </div>
+    <!--フリガナ-->
+    <div class="row">
+      <div class="form-group col-md-6">
+        <%= f.label :last_name_kana, "セイ", class: "form-label" %>
+        <%= f.text_field :last_name_kana, class: "form-control" %>
+      </div>
+      <div class="form-group col-md-6">
+        <%= f.label :first_name_kana, "メイ", class: "form-label" %>
+        <%= f.text_field :first_name_kana, class: "form-control" %>
+      </div>
+    </div>
+    <!--生徒氏名・入学年度・続柄-->
+    <div class="row">
+      <div class="form-group col-md-6">
+        <%= f.label :member_name, "生徒氏名", class: "form-label" %>
+        <%= f.text_field :member_name, class: "form-control" %>
+      </div>
+      <div class="form-group col-md-3">
+        <%= f.label :year_of_enrollment, "入学年度", class: "form-label" %>
+        <%= f.text_field :year_of_enrollment, class: "form-control" %>
+      </div>
+      <div class="form-group col-md-3">
+        <%= f.label :relationship, "続柄", class: "form-label" %>
+        <%= f.text_field :relationship, class: "form-control" %>
+      </div>
+    </div>
+    <!--郵便番号-->
+    <div class="row">
+      <div class="form-group col-md-3">
+        <%= f.label :postal_code, "郵便番号", class: "form-label" %>
+        <%= f.text_field :postal_code, class: "form-control" %>
+      </div>
+    </div>
+    <!--住所-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :address, "住所", class: "form-label" %>
+        <%= f.text_field :address, class: "form-control" %>
+      </div>
+    </div>
+    <!--電話番号-->
+    <div class="row">
+      <div class="form-group col-md-4">
+        <%= f.label :tel, "電話番号", class: "form-label" %>
+        <%= f.text_field :tel, class: "form-control" %>
+      </div>
+    </div>
 
-    <% end %>
+    <div class="row">
+      <div class="form-group">
+      <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
+      </div>
+    </div>
+
+  <% end %>
 
 </section>
