--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -1,48 +1,43 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">アイテム一覧</h4>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">お知らせ一覧</h2>
+  
+  <!--応援グッズ追加画面へのリンク-->
+  <div>
+    <%= link_to "アイテム登録", new_admins_item_path, class: "btn btn-outline-secondary m-3" %>
   </div>
+  
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+  
   <!--お知らせ一覧-->
-  <div class="container admins_items_list">
-    <div class="row">
-      <%= link_to "アイテム登録", new_admins_item_path, class: "btn btn-success" %>
-    </div>
-    
-    <div class="row">
-      <div class="table-responsive">
-        <table class="table">
-          <head>
-            <tr>
-              <th>イメージ</th>
-              <th>アイテム</th>
-              <th></th>
-              <th></th>
-              <th></th>
-            </tr>
-          </head>
-          <tbody>
-            <% @items.each do |item| %>
-            <tr>
-              <td>
-                <%= link_to admins_item_path(item.id) do %>
-                <%= attachment_image_tag item, :image, :fill, 100, 100 %>
-                <% end %>
-              </td>
-              <td><%= item.name %></td>
-              <td><%= link_to "詳細", admins_item_path(item.id), class: "text-dark link-secondary" %></td>
-              <td><%= link_to "編集", edit_admins_item_path(item.id), class: "text-primary link-secondary" %></td>
-              <td><%= link_to "削除", admins_item_path(item.id), method: :delete, "data-confirm" => "削除しますか？", class: "text-danger" %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
+  <div class="table-responsive">
+    <table class="table">
+      <head>
+        <tr>
+          <th>イメージ</th>
+          <th>アイテム</th>
+          <th>販売</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </head>
+      <tbody>
+        <% @items.each do |item| %>
+        <tr>
+          <td><%= attachment_image_tag item, :image, :fill, 100, 100 %></td>
+          <td><%= item.name %></td>
+          <td><%= item.is_active_i18n %></td>
+          <td><%= link_to "詳細", admins_item_path(item.id), class: "text-dark link-secondary" %></td>
+          <td><%= link_to "削除", admins_item_path(item.id), method: :delete, "data-confirm" => "削除しますか？", class: "text-danger" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-
+  
+  <%= paginate @items %>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
