注文管理レイアウト調整完了

--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -1,6 +1,6 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">お知らせ一覧</h2>
+  <h2 class="section-ttl row mb-3">応援グッズ一覧</h2>
   
   <!--応援グッズ追加画面へのリンク-->
   <div>
@@ -12,7 +12,7 @@
     <%= notice %>
   </p>
   
-  <!--お知らせ一覧-->
+  <!--応援グッズ一覧-->
   <div class="table-responsive">
     <table class="table">
       <head>
