--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,37 +1,36 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">注文一覧</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">注文一覧</h2>
+
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
   <!--注文一覧-->
-  <div class="container admins_order_list">
-    <div class="row">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>注文日時</th>
-              <th>注文ステータス</th>
-              <th>注文者氏名</th>
-              <th>購入金額</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @orders.each do |order| %>
-            <tr>
-              <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M"), admins_order_path(order.id) %></td>
-              <td><%= order.order_status_i18n %></td>
-              <td><%= order.name %></td>
-              <td><%= order.total_payment %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>注文日時</th>
+          <th>注文ステータス</th>
+          <th>注文者氏名</th>
+          <th>購入金額（税込）</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+        <tr>
+          <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M"), admins_order_path(order.id) %></td>
+          <td><%= order.order_status_i18n %></td>
+          <td><%= order.name %></td>
+          <td><%= order.total_payment.to_s(:delimited) + "円"%></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
+
+  <%= paginate @orders %>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
