--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -1,100 +1,99 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">注文詳細</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">注文詳細</h2>
 
-  <div class="container admins_order">
-    <!-- サクセスメッセージの表示 -->
-    <p id="notice" class="text-danger">
-      <%= notice %>
-    </p>
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th class="col-4">項目</th>
-            <th class="col-8">内容</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-      			<td>注文者氏名</td>
-      			<td><%= @order.name %></td>
-          </tr>
-          <tr>
-      			<td>受付日</td>
-      			<td><%= @order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
-          </tr>
-          <tr>
-      			<td>更新日</td>
-      			<td><%= @order.updated_at.strftime("%Y-%m-%d %H:%M") %></td>
-          </tr>
-          <tr>
-      			<td>配送先名</td>
-      			<td><%= "〒" + @order.postal_code + " " + @order.address %><br><%= "宛名：" + @order.addressee %></td>
-          </tr>
-          <tr>
-      			<td>商品合計</td>
-      			<td><%= @sum.to_s(:delimited) + "円（税込）" %></td>
-          </tr>
-          <tr>
-      			<td>送料</td>
-      			<td><%= @order.shipping_cost.to_s(:delimited) + "円" %></td>
-          </tr>
-          <tr>
-      			<td>請求金額</td>
-      			<td><%= @order.total_payment.to_s(:delimited) + "円（税込）" %></td>
-          </tr>
-          <tr>
-      			<td>支払方法</td>
-      			<td><%= @order.payment_method_i18n %></td>
-          </tr>
-          <tr>
-      			<td>商品お渡し</td>
-      			<td><%= @order.product_passing_i18n %></td>
-      			<td><%= @order.other %></td>
-          </tr>
-          <tr>
-      			<td>注文情報の更新</td>
-      			<td>
-              <%= form_with model: @order, url: admins_order_path(@order.id), method: :patch, loacl: true do |f| %>
-              <%= f.label :order_status, "注文ステータス" %>
-              <%= f.select :order_status, Order.order_statuses_i18n.invert %>
-              <br />
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
+  <!-- 注文詳細 -->
+  <div class="row justify-content-center bg-light">
+    <table class="table mb-0">
+      <thead>
+        <tr>
+          <th class="col-4">項目</th>
+          <th class="col-8">内容</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+    			<td>注文者氏名</td>
+    			<td><%= @order.name %></td>
+        </tr>
+        <tr>
+    			<td>受付日</td>
+    			<td><%= @order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
+        </tr>
+        <tr>
+    			<td>更新日</td>
+    			<td><%= @order.updated_at.strftime("%Y-%m-%d %H:%M") %></td>
+        </tr>
+        <tr>
+    			<td>配送先名</td>
+    			<td><%= "〒" + @order.postal_code + " " + @order.address %><br><%= "宛名：" + @order.addressee %></td>
+        </tr>
+        <tr>
+    			<td>商品合計</td>
+    			<td><%= @sum.to_s(:delimited) + "円（税込）" %></td>
+        </tr>
+        <tr>
+    			<td>送料</td>
+    			<td><%= @order.shipping_cost.to_s(:delimited) + "円" %></td>
+        </tr>
+        <tr>
+    			<td>請求金額</td>
+    			<td><%= @order.total_payment.to_s(:delimited) + "円（税込）" %></td>
+        </tr>
+        <tr>
+    			<td>支払方法</td>
+    			<td><%= @order.payment_method_i18n %></td>
+        </tr>
+        <tr>
+    			<td>商品お渡し</td>
+    			<td><%= @order.product_passing_i18n %></td>
+    			<td><%= @order.other %></td>
+        </tr>
+        <tr>
+    			<td>注文情報の更新</td>
+    			<td>
+            <%= form_with model: @order, url: admins_order_path(@order.id), method: :patch, loacl: true do |f| %>
               <%= f.label :delivery_date, "お渡し予定日" %>
               <%= f.date_field :delivery_date %>
-              <%= f.submit '更新', class: "btn btn-success" %>
-              <% end %>
-      			</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="row">
-      <p>注文グッズ一覧</p>
-      <table class="table table-bordered">
-        <thead>
-          <tr class="table-active">
-            <th>商品</th>
-            <th>単価(税込)</th>
-            <th>個数</th>
-            <th>小計</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @order_details.each do |order_detail| %>
-          <tr>
-            <td><%= order_detail.item.name %></td>
-            <td><%= order_detail.item.with_tax_price %></td>
-            <td><%= order_detail.amount %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+              <br />
+              <%= f.label :order_status, "注文ステータス" %>
+              <%= f.select :order_status, Order.order_statuses_i18n.invert %>
+              <%= f.submit '更新', class: "btn btn-outline-secondary m-3" %>
+            <% end %>
+    			</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- 注文商品一覧 -->
+  <p class="font-weight-bold mt-3 mb-0">注文グッズ一覧</p>
+  <div class="row justify-content-center bg-light">
+    <table class="table table-bordered mb-0">
+      <thead>
+        <tr class="table-active">
+          <th>商品</th>
+          <th>単価（税込）</th>
+          <th>個数</th>
+          <th>小計（税込）</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order_details.each do |order_detail| %>
+        <tr>
+          <td><%= order_detail.item.name %></td>
+          <td><%= order_detail.item.with_tax_price.to_s(:delimited) %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
