お問い合わせ管理レイアウト調整完了

--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -1,37 +1,36 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">お問い合わせ一覧</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">お問い合わせ一覧</h2>
+
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
   <!--お問い合わせ一覧-->
-  <div class="container admins_contacts_list">
-    <div class="row">
-      <div class="table-responsive">
-        <table class="table">
-          <head>
-            <tr>
-              <th>お問い合わせ日時</th>
-              <th>氏名</th>
-              <th>回答ステータス</th>
-              <th></th>
-            </tr>
-          </head>
-          <tbody>
-            <% @contacts.each do |contact| %>
-            <tr>
-              <td><%= contact.created_at.strftime("%Y-%m-%d %H:%M") %></td>
-              <td><%= contact.name %></td>
-              <td><%= contact.answer_status_i18n %></td>
-              <td><%= link_to "詳細", admins_contact_path(contact.id), class: "text-dark link-secondary" %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
+  <div class="table-responsive">
+    <table class="table">
+      <head>
+        <tr>
+          <th>お問い合わせ日時</th>
+          <th>氏名</th>
+          <th>回答ステータス</th>
+          <th></th>
+        </tr>
+      </head>
+      <tbody>
+        <% @contacts.each do |contact| %>
+        <tr>
+          <td><%= contact.created_at.strftime("%Y-%m-%d %H:%M") %></td>
+          <td><%= contact.name %></td>
+          <td><%= contact.answer_status_i18n %></td>
+          <td><%= link_to "詳細", admins_contact_path(contact.id), class: "text-dark link-secondary" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
+
+  <%= paginate @contacts %>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
