--- a/app/views/admins/contacts/show.html.erb
+++ b/app/views/admins/contacts/show.html.erb
@@ -1,51 +1,45 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">お問い合わせ詳細</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">お問い合わせ詳細</h2>
+
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
 
   <!--お問い合わせ詳細-->
-  <div class="container admins_contact">
-    <!-- サクセスメッセージの表示 -->
-    <p id="notice" class="text-danger">
-      <%= notice %>
-    </p>
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th class="col-4">項目</th>
-            <th class="col-8">内容</th>
-          </tr>
-        </thead> 
-        <tbody>
-          <tr>
-      			<td>氏名</td>
-      			<td><%= @contact.name %></td>
-          </tr>
-          <tr>
-      			<td>メールアドレス</td>
-      			<td><%= @contact.email %></td>
-          </tr>
-          <tr>
-      			<td>お問い合わせ内容</td>
-      			<td><%= simple_format(@contact.content) %></td>
-          </tr>
-          <tr>
-      			<td>回答状況</td>
-      			<td>
-      			  <%= form_with model: @contact, url: "/admins/contacts/#{@contact.id}", method: :patch, loacl:true do |f| %>
-              <%= f.select :answer_status, Contact.answer_statuses_i18n.invert %>
-              <%= f.submit '更新' %>
-              <% end %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <div class="row justify-content-center bg-light">
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="col-4">項目</th>
+          <th class="col-8">内容</th>
+        </tr>
+      </thead> 
+      <tbody>
+        <tr>
+    			<td>氏名</td>
+    			<td><%= @contact.name %></td>
+        </tr>
+        <tr>
+    			<td>メールアドレス</td>
+    			<td><%= @contact.email %></td>
+        </tr>
+        <tr>
+    			<td>お問い合わせ内容</td>
+    			<td><%= simple_format(@contact.content) %></td>
+        </tr>
+        <tr>
+    			<td>回答状況</td>
+    			<td>
+    			  <%= form_with model: @contact, url: "/admins/contacts/#{@contact.id}", method: :patch, loacl:true do |f| %>
+            <%= f.select :answer_status, Contact.answer_statuses_i18n.invert %>
+            <%= f.submit '更新', class: "btn btn-outline-secondary m-3" %>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
