--- a/app/views/admins/events/edit.html.erb
+++ b/app/views/admins/events/edit.html.erb
@@ -1,29 +1,47 @@
-<h1>予定を編集</h1>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">スケジュールを編集してください。</h2>
+ 
+  <%= form_with model: @event, url: "/admins/events/#{@event.id}", local: true do |f| %>
+  
+  <!--エラーメッセージ-->
+  <%= render 'layouts/error_messages', model: f.object %>
 
-<%= form_with model: @event, url: "/admins/events/#{@event.id}", local: true do |f| %>
+  <!--スケジュールタイトル-->
+  <div class="row">
+    <div class="form-group col-md-8">
+      <%= f.label :title, "スケジュールタイトル", class: "form-label" %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+  </div>
+  
+  <!--開始時間-->
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :start_time, "開始時間", class: "form-label" %>
+      <%= f.datetime_field :start_time, class: "form-control" %>
+    </div>
+  </div>
+  
+  <!--終了時間-->
+  <div class="row">
+    <div class="form-group col-md-4">
+      <%= f.label :end_time, "終了時間", class: "form-label" %>
+      <%= f.datetime_field :end_time, class: "form-control" %>
+   </div>
+ </div>
+ 
+ <div class="form_group">
+   <%= f.label :content, "内容", class: "form-label" %>
+   <%= f.text_area :content, class: "form-control", rows: "20" %>
+ </div>
+ 
+  <div class="row">
+    <div class="form-group">
+    <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
+    </div>
+  </div>
 
- <div class="form_group">
-   <%= f.label :title %>
-   <%= f.text_field :title %>
- </div>
- 
- <div class="form_group">
-   <%= f.label :start_time %>
-   <%= f.datetime_field :start_time %>
- </div>
- 
- <div class="form_group">
-   <%= f.label :end_time %>
-   <%= f.datetime_field :end_time %>
- </div>
- 
- <div class="form_group">
-   <%= f.label :content %>
-   <%= f.text_area :content %>
- </div>
- 
- <div class="form_group">
-   <%= f.submit %>
- </div>
+  <% end %>
 
-<% end %>
+</section>
