--- a/app/views/guardians/information_for_guardians/show.html.erb
+++ b/app/views/guardians/information_for_guardians/show.html.erb
@@ -1,32 +1,57 @@
-<h1>保護者用お知らせ詳細</h1>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">保護者お知らせ詳細</h2>
 
-<div>
-  <%= @informationforguardian.category_i18n %>
-</div>
+  <!--保護者専用お知らせ詳細-->
+  <div class="row justify-content-center m-5">
+    <%= attachment_image_tag  @informationforguardian, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+  </div>
 
-<div>
-  <%= @informationforguardian.title %>
-</div>
+  <div class="row justify-content-center bg-light">
+    <table class="table mb-0">
+      <thead>
+        <tr>
+          <th class="col-4">項目</th>
+          <th class="col-8">詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+    			<td>カテゴリー</td>
+    			<td><%= @informationforguardian.category_i18n %></td>
+        </tr>
+        <tr>
+    			<td>タイトル</td>
+    			<td><%= @informationforguardian.title %></td>
+        </tr>
+        <tr>
+    			<td>内容</td>
+    			<td><%= simple_format(@informationforguardian.content) %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<div>
-  <%= safe_join(@informationforguardian.content.split("\n"),tag(:br)) %>
-</div>
-
-<div>
-  <%= attachment_image_tag @informationforguardian, :image, :fill, 200, 200 %>
-</div>
-
-
- <% if @informationforguardian.favorited_by?(current_guardian) %>
-    <p>
-      <%= link_to guardians_information_for_guardian_favorites_path(@informationforguardian), method: :delete do %>
-        ★<%= @informationforguardian.favorites.count %> 確認済！
+  <div class="row justify-content-between">
+    <div class="col-2 mt-3">
+      <!--未読確認-->
+      <% if @informationforguardian.favorited_by?(current_guardian) %>
+      <p>
+        <%= link_to guardians_information_for_guardian_favorites_path(@informationforguardian), method: :delete do %>
+          ★<%= @informationforguardian.favorites.count %> 既読
+        <% end %>
+      </p>
+      <% else %>
+      <p>
+        <%= link_to guardians_information_for_guardian_favorites_path(@informationforguardian), method: :post do %>
+          ☆<%=@informationforguardian.favorites.count %> 未読
+        <% end %>
+      </p>
       <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to guardians_information_for_guardian_favorites_path(@informationforguardian), method: :post do %>
-        ☆<%=@informationforguardian.favorites.count %> 未確認
-      <% end %>
-    </p>
-<% end %>
+    </div>
+    <div class="col-2">
+      <%= link_to "戻る", guardians_information_for_guardians_path, class: "btn btn-outline-secondary m-3" %>
+    </div>
+  </div>
+
+</section>
