--- a/app/views/guardians/homes/show.html.erb
+++ b/app/views/guardians/homes/show.html.erb
@@ -1,46 +1,61 @@
-<div class="field">
-    <%= @guardian.last_name %>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">保護者登録情報</h2>
+  
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
+  <!--保護者詳細内容-->
+  <div class="row justify-content-center bg-light">
+    <table class="table mb-0">
+      <thead>
+        <tr>
+          <th class="col-4">項目</th>
+          <th class="col-8">詳細</th>
+        </tr>
+        </thead>
+      <tbody>
+        <tr>
+    			<td>保護者氏名</td>
+    			<td><%= @guardian.last_name + ' ' + @guardian.first_name %></td>
+        </tr>
+        <tr>
+    			<td>フリガナ</td>
+    			<td><%= @guardian.last_name_kana + ' ' + @guardian.first_name_kana %></td>
+        </tr>
+        <tr>
+    			<td>生徒氏名</td>
+    			<td><%= @guardian.member_name %></td>
+        </tr>
+        <tr>
+    			<td>入学年度</td>
+    			<td><%= @guardian.year_of_enrollment %></td>
+        </tr>
+        <tr>
+    			<td>続柄</td>
+    			<td><%= @guardian.relationship %></td>
+        </tr>
+        <tr>
+    			<td>郵便番号</td>
+    			<td><%= @guardian.postal_code %></td>
+        </tr>
+        <tr>
+    			<td>住所</td>
+    			<td><%= @guardian.address %></td>
+        </tr>
+        <tr>
+    			<td>電話番号</td>
+    			<td><%= @guardian.tel %></td>
+        </tr>
+        <tr>
+    			<td>メールアドレス</td>
+    			<td><%= @guardian.email %></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+  <%= link_to "編集", edit_guardians_home_path(@guardian.id), class: "btn btn-outline-secondary m-3" %>
 
-  <div class="field">
-    <%= @guardian.first_name %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.last_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.first_name_kana %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.relationship %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.member_name %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.year_of_enrollment %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.postal_code %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.address %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.tel %>
-  </div>
-
-  <div class="field">
-    <%= @guardian.email %>
-  </div>
-
-
-<%= link_to "編集", edit_guardians_home_path(@guardian.id) %>
+</section>
