--- a/app/views/game_results/index.html.erb
+++ b/app/views/game_results/index.html.erb
@@ -1,2 +1,30 @@
-<h1>GameResults#index</h1>
-<p>Find me in app/views/game_results/index.html.erb</p>
+<section class="container mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">お知らせ一覧</h2>
+
+  <div class="main_info container">
+    <div class="row justify-content-around">
+      <% @game_results.each do |game_result| %>
+        <!--カードの枠-->
+        <%= link_to game_result_path(game_result.id) do %>
+          <article class="card mt-4 shadow" style="max-width: 20rem;">
+            <!--カード本文-->
+            <div class="card-body">
+                <!--カードの副見出し-->
+                <h7 class="card-subtitle text-dark text-decoration-none"><%= game_result.game_title %></h6>
+                <!--カードの見出し-->
+                <h6 class="card-title text-dark link-secondary"><%= game_result.game_title %></h4>
+                <!--カードの内容文--->
+                <p class="card-text"></p>
+            </div>
+            <!--カード下部に画像を表示-->
+            <%= attachment_image_tag game_result, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
+          </article>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+  
+  <%= paginate @game_results %>
+
+</section>
