--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,32 +1,27 @@
-<main>
+<section class="member-content container mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">選手・スタッフ一覧</h2>
+
+  <!--メンバー追加画面へのリンク-->
   <div class="container">
-      <h4 class="m-5">スタッフ・選手紹介</h4>
+    <div class="row justify-content-around">
+        <% @members.each do |member| %>
+        <!--カードの枠-->
+        <article class="card mt-4 shadow" style="max-width: 20rem;">
+            <!--カード上部に画像を表示-->
+            <%= link_to member_path(member.id) do %>
+              <%= attachment_image_tag member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
+            <% end %>
+            <!--カード本文-->
+            <div class="card-body">
+              <!--カードの副見出し-->
+              <span class="card-subtitle"><%= "<" + member.grade_i18n + ">" %></span>
+              <!--カードの見出し-->
+              <h4 class="card-title font-weight-bold"><%= member.last_name + " " + member.first_name %></h4>
+            </div>
+        </article>
+        <% end %>
+    </div>
   </div>
-
-  <div class="container">
-      <div class="row justify-content-around">
-          <% @members.each do |member| %>
-          <!--カードの枠-->
-          <article class="card mt-4" style="max-width: 20rem;">
-              <!--カード本文-->
-              <div class="card-body">
-                  <!--カードの副見出し-->
-                  <h7 class="card-subtitle"><%= "<" + member.grade_i18n + ">" %></h6>
-                  <!--カードの見出し-->
-                  <h4 class="card-title font-weight-bold"><%= member.last_name + " " + member.first_name %></h4>
-                  <!--カードの内容文--->
-                  <p class="card-text"></p>
-              </div>
-              <!--カード下部に画像を表示-->
-              <%= link_to member_path(member.id) do %>
-                <%= attachment_image_tag member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
-              <% end %>
-          </article>
-          <% end %>
-      </div>
-  </div>
-
-
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
+  
+</section>
