--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,4 @@
-<section class="container w-50">
+<section class="container">
   <h2 class="section-ttl">アイテム詳細</h2>
   <div class="flex">
     <%= attachment_image_tag @item, :image, :fill, 200, 200 %>
@@ -30,6 +30,3 @@
     </div>
   </div>
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
