--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
                   <%= link_to "選手・スタッフ", members_path, class: 'nav-link text-dark' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "OB紹介", members_path, class: 'nav-link text-dark' %>
+                  <%= link_to "OB紹介", graduates_path, class: 'nav-link text-dark' %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "お知らせ", informations_path, class: 'nav-link text-dark' %>
