--- a/app/views/orders/thanks.html.erb
+++ b/app/views/orders/thanks.html.erb
@@ -1,3 +1,13 @@
-<h1>ご注文ありがとうございます！！</h1>
-<p>商品が整い次第担当者よりメールにてご連絡いたします。<br>
-今後青山高校サッカー部を応援よろしくお願いいたします！！</p>
+<section class="container mt-5">
+
+  <!--見出し-->
+  <h3 class="row justify-content-center">
+    ご注文ありがとうございます！
+  </h3>
+  <!--コメント-->
+ <div class="row justify-content-center">
+  <p>商品が整い次第、担当者よりメールにてご連絡いたしますのでしばらくお待ちください。<br>
+  今後とも青山高校サッカー部の応援をよろしくお願いいたします。</p>
+ </div>
+
+</section>
