--- a/app/views/contacts/complete.html.erb
+++ b/app/views/contacts/complete.html.erb
@@ -1,10 +1,15 @@
-<section class="container w-50 mt-5">
-
-  <h3>お問い合わせありがとうございました！</h3>
+<section class="container mt-5">
   
-  <p>後日担当者よりメールにてご返信いたします。<br />
-  通常は、2営業日以内にご返信させていただいております。<br />
-  土日祝日等、休業日に頂いたお問い合わせにつきましては、<br />
+  <!--見出し-->
+  <h3 class="row justify-content-center">
+    お問い合わせありがとうございました！
+  </h3>
+  <!--コメント-->
+ <div class="row justify-content-center">
+  <p>後日担当者よりメールにてご返信いたします。<br>
+  通常は、2営業日以内にご返信させていただいております。<br>
+  土日祝日等、休業日に頂いたお問い合わせにつきましては、<br>
   翌営業日以降の回答とさせていただきます。</p>
-  
+ </div>
+
 </section>
