--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,38 +1,47 @@
-<div class="container">
-    <h4 class="m-5">応援グッズ</h4>
-</div>
-
-<div class="container">
-    <div class="row justify-content-center card-columns">
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">応援グッズ一覧</h2>
+  
+  <!--応援グッズ追加画面へのリンク-->
+  <div>
+    <%= link_to "アイテム登録", new_admins_item_path, class: "btn btn-outline-secondary m-3" %>
+  </div>
+  
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+  
+  <!--応援グッズ一覧-->
+  <div class="table-responsive">
+    <table class="table">
+      <head>
+        <tr>
+          <th>イメージ</th>
+          <th>アイテム</th>
+          <th>販売</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </head>
+      <tbody>
         <% @items.each do |item| %>
-        <!--カードの枠-->
-        <article class="card h-100 mt-4" style="max-width: 20rem;">
-            <!--カード本文-->
-            <div class="card-body">
-                <!--カードの見出し-->
-                <h4 class="card-title font-weight-bold"><%= item.name %></h4>
-            </div>
-            <!--カード下部に画像を表示-->
-            <%= link_to item_path(item.id) do %>
-              <%= attachment_image_tag item, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
-            <% end %>
-            <!--カードの副見出し-->
-            <div class="card-footer">
-              <h7 class="card-subtitle"><%= item.with_tax_price.to_s(:delimited) + "円（税込）" %></h6>
-            </div>
-        </article>
+        <tr>
+          <td><%= attachment_image_tag item, :image, :fill, 100, 100 %></td>
+          <td><%= item.name %></td>
+          <td><%= item.is_active_i18n %></td>
+          <td><%= link_to "詳細", item_path(item.id), class: "text-dark link-secondary" %></td>
+        </tr>
         <% end %>
-    </div>
-</div>
+      </tbody>
+    </table>
+  </div>
+  
+  <%= paginate @items %>
 
-<div class="container m-5">
   <p>応援グッズの売り上げの一部は、青山学校サッカー部の活動資金に充てさせて頂きます。<br>
     ・活動運営費の不足分<br>
     ・スポーツドリンクなどのサポート補食費<br>
     など<br>
   </p>
-</div>
-
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
+</section>
