--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,44 +1,72 @@
-<h1>注文情報入力画面</h1>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">注文情報を入力してください。</h2>
 
-<%= form_with model: @order, url: confirm_orders_path, local:true do |f| %>
+    <%= form_with model: @order, url: confirm_orders_path, local:true do |f| %>
+      <!--エラーメッセージ-->
+      <%= render 'layouts/error_messages', model: f.object %>
 
-  <div class="form_group">
-    <%= f.label :product_passing, "お渡しの方法" %>
-    <%= f.radio_button :product_passing, Order.product_passings.key(0) %>
-    <%= f.label :product_passing, Order.product_passings_i18n[:delivery] %>
-    <%= f.radio_button :product_passing, Order.product_passings.key(1) %>
-    <%= f.label :product_passing, Order.product_passings_i18n[:other] %>
-  </div>
 
-  <div class="form_group">
-    <%= f.label :other, "その他受取場所" %>
-    <%= f.text_field :other, placeholder: '試合会場、生徒に渡すなど' %>
-  </div>
+      <!--配送先宛名-->
+      <div class="row">
+        <div class="form-group col-md-6">
+          <%= f.label :name, "注文者氏名", class: "form-label" %>
+          <%= f.text_field :name, placeholder: '田中　太郎', class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="form_group">
-    <%= f.label :postal_code, "配送先郵便番号" %>
-    <%= f.text_field :postal_code %>
-  </div>
+      <div class="row">
+      <!--お渡し方法-->
+        <div class="form-group col-md-6">
+          <%= f.label :product_passing, "お渡しの方法" %><br>
+          <%= f.radio_button :product_passing, Order.product_passings.key(0) %>
+          <%= f.label :product_passing, Order.product_passings_i18n[:delivery] %>
+          <%= f.radio_button :product_passing, Order.product_passings.key(1) %>
+          <%= f.label :product_passing, Order.product_passings_i18n[:other] %>
+        </div>
+      </div>
+      <!--受渡場所-->
+      <div class="row">
+        <div class="form-group col-md-6">
+          <%= f.label :other, "その他受取場所", class: "form-label" %>
+          <%= f.text_field :other, placeholder: '試合会場、生徒に渡すなど', class: "form-control" %>
+        </div>
+      </div>
+      <!--配送先郵便番号-->
+      <div class="row">
+        <div class="form-group col-md-3">
+          <%= f.label :postal_code, "配送先郵便番号", class: "form-label" %>
+          <%= f.text_field :postal_code, class: "form-control" %>
+        </div>
+      </div>
+      <!--配送先住所-->
+      <div class="row">
+        <div class="form-group col-md-12">
+          <%= f.label :address, "配送先住所", class: "form-label" %>
+          <%= f.text_field :address, class: "form-control" %>
+        </div>
+      </div>
+      <!--配送先宛名-->
+      <div class="row">
+        <div class="form-group col-md-6">
+          <%= f.label :addressee, "配送先宛名", class: "form-label" %>
+          <%= f.text_field :addressee, placeholder: '鈴木　花子', class: "form-control" %>
+        </div>
+      </div>
+      <!--支払方法-->
+      <div class="row">
+        <div class="form-group">
+          <%= f.label :payment_method, "支払方法", class: "form-label" %>
+          <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+          <%= f.label :payment_method, Order.payment_methods_i18n[:cash] %>
+          <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+          <%= f.label :payment_method, Order.payment_methods_i18n[:transfer] %>
+        </div>
+      </div>
 
-  <div class="form_group">
-    <%= f.label :address, "配送先住所" %>
-    <%= f.text_field :address %>
-  </div>
+      <div class="row actions">
+        <%= f.submit '確認画面へ進む', class: "btn btn-success" %>
+      </div>
+    <% end %>
 
-  <div class="form_group">
-    <%= f.label :addressee, "配送先宛名" %>
-    <%= f.text_field :addressee, placeholder: '鈴木　花子' %>
-  </div>
-
-  <div class="form_group">
-    <%= f.label :payment_method, "支払方法" %>
-    <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-    <%= f.label :payment_method, Order.payment_methods_i18n[:cash] %>
-    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-    <%= f.label :payment_method, Order.payment_methods_i18n[:transfer] %>
-  </div>
-  
-  
-  <%= submit_tag '確認画面へ進む',class: 'btn btn-success' %>
-
-<% end %>
+</section>
